--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Major eCommerce Clone - practice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/basir/m-e-c.git"
   },
   "author": "",
   "license": "ISC"
